# cmd-find

./: .gitignore  README.md  TODO.txt  install.sh  pyproject.toml
cmd_find/: __init__.py  config.py  finder.py  main.py  mcp_server.py  scanner.py
example-commands/docker/: exec-shell.sh  prune-containers.sh  stats.sh  system-prune.sh
example-commands/git/: fetch-pr.sh  log-graph.sh  new-branch.sh  squash-commits.sh  undo-commit.sh
example-commands/system/: disk-usage.sh  find-large-files.sh  kill-process.sh  open-ports.sh  ssh-server.sh  tar-archive.sh
shell/: cdfr.bash  cdfr.zsh  cmd-find.bash  cmd-find.zsh
tests/: run.py  test_config.py  test_finder.py  test_integration.py  test_mcp_server.py  test_scanner.py
tests/fixtures/commands/: db-backup.sh  no-description.sh  not-a-script.txt
tests/fixtures/commands/docker/: cleanup.sh  exec.sh  no-command.sh
tests/fixtures/commands/git/: new-branch.sh  rebase.sh  stash.sh  status.sh  undo.sh
tests/fixtures/commands/nested/deep/: buried.sh
