[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmd-find"
version = "1.0.0"
description = "Fuzzy-find templated shell commands and paste them into your terminal"
authors = [{ name = "Arnav" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.scripts]
cmd-find = "cmd_find.main:main"

[tool.setuptools.packages.find]
include = ["cmd_find*"]
